[package]
name = "ListeningPool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "2.0.13", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
config="0.10.1"