[package]
name = "uniswap_v3_listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ethers = { version = "2.0.13", features = ["ws"] }
actix-web = "4"
eyre = "0.6"
sea-orm = { version = "0.12", features = [
    'sqlx-mysql',
    'runtime-async-std-native-tls',
    "macros",
] }

dotenvy = "0.15"
config = "0.10.1"
tokio = { version = "1", features = ["full"] }

log = "0.4"
env_logger = "0.10"

sea-orm-migration = "^0.12.0"

web3 = "0.19"
serde = { version = "1.0.189", features = ["derive"] }

chrono = "0.4"